# go-icpz

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  GoICPzConfig.cmake.in  INSTALLATION.txt  README.md  README.txt  UseGoICPz.cmake.in  appveyor.yml  goicpzPclIcp.cpp  goicpzPclIcp.h  rename.sh
CMake/: CPackOptions.cmake.in  CPackSetup.cmake  CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  Findgflags.cmake.in  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  mpCreateGuiApplication.cmake  mpExternalProjectHelperMacros.cmake  mpMacroInstallCommandLineApp.cmake  mpMacroInstallHeaders.cmake  mpMacroInstallLibrary.cmake
CMake/ExternalProjects/: Boost.cmake  Eigen.cmake  FLANN.cmake  OpenCV.cmake  PCL.cmake  VTK.cmake  gflags.cmake  glog.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  goicpzGlobalRigidRegTest.cpp  goicpzGlobalRigidRegTest.h  goicpzMyFirstApp.cpp  goicpzPclTestApp.cpp
Code/GuiApps/: CMakeLists.txt
Code/GuiApps/QMLDemo/: CMakeLists.txt
Code/GuiApps/QMLDemo/App/: main.cpp
Code/GuiApps/QtVTK/: CMakeLists.txt
Code/GuiApps/QtVTK/App/: CMakeLists.txt  goicpzCentralWidget.cpp  goicpzCentralWidget.h  goicpzCentralWidget.ui  goicpzMainWindow.cpp  goicpzMainWindow.h  goicpzMainWindow.ui  main.cpp
Code/GuiApps/QtVTK/Controller/: CMakeLists.txt  goicpzControlPanelWidget.cpp  goicpzControlPanelWidget.h  goicpzControlPanelWidget.ui  goicpzQtVTKControllerWin32ExportHeader.h  goicpzTwinSliderWidget.cpp  goicpzTwinSliderWidget.h
Code/GuiApps/QtVTK/Model/: CMakeLists.txt  goicpzQtVTKModelWin32ExportHeader.h  goicpzVolumeRenderingModel.cpp  goicpzVolumeRenderingModel.h
Code/GuiApps/QtVTK/View/: CMakeLists.txt  goicpzQtVTKViewWin32ExportHeader.h  goicpzVTKViewWidget.cpp  goicpzVTKViewWidget.h
Code/Lib/: CMakeLists.txt  FastMarchingMethod.h  GlobalRegister.cpp  GlobalRegister.h  IcpPreProcessor.cpp  IcpPreProcessor.h  RigidIcp.cpp  RigidIcp.h  Sampling.cpp  Sampling.h  SurfaceRegister.cpp  SurfaceRegister.h  SurfaceVisualiser.cpp  SurfaceVisualiser.h  TOLDI.h  TOLDI_LRF.cpp  TOLDI_descriptor.cpp  goicpzBasicTypes.cpp  goicpzBasicTypes.h  goicpzException.cpp  goicpzException.h  goicpzExceptionMacro.h  goicpzMyFunctions.cpp  goicpzMyFunctions.h  goicpzPclIcp.cpp  goicpzPclIcp.h  goicpzSurfaceUtils.cpp  goicpzSurfaceUtils.h  goicpzWin32ExportHeader.h  nanoflann.hpp
Code/Lib/PythonBinding/: CMakeLists.txt  goicpzLibPython.cpp
Datasets/Moving/: InitialCT_boundary.ply  InitialCT_top.ply  InitialConfigurationSegmentedSurface.ply
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
Testing/: CMakeLists.txt  IcpPreProcessorTest.cpp  IcpPreProcessorTest.h  goicpzBasicTest.cpp  goicpzCatchMain.cpp  goicpzCatchMain.h  goicpzCommandLineArgsTest.cpp  goicpzGlobalRegisterTests.cpp  goicpzGlobalRegisterTests.h  goicpzSurfaceUtilsTest.cpp  goicpzSurfaceUtilsTest.h
Utilities/CppCheck/: GOICPZCppCheck.cmake
Utilities/Doxygen/: doxygen.config.in  goicpzdoxygen.pl.in
Utilities/KWStyle/: GOICPZFiles.txt.in  GOICPZHeader.h  GOICPZKWS.xml.in  GOICPZKWStyle.cmake
